Track4/wevdev3app/frontend-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: frontend-policy
  namespace: dev3app
spec:
  podSelector:
    matchLabels:
      app: frontend
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from: []  # nessun pod interno può chiamare frontend
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: backend
